--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/ui": "^3.3.2",
     "bpm-detective": "^2.0.5",
+    "meyda": "^5.6.3",
     "music-metadata": "^11.8.3",
     "nuxt": "^4.0.3",
     "vue": "^3.5.18",
