--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
-    "@nuxt/ui": "^3.3.2",
+    "@nuxt/ui": "4.0.0-alpha.1",
     "bpm-detective": "^2.0.5",
     "meyda": "^5.6.3",
     "music-metadata": "^11.8.3",
-    "nuxt": "^4.0.3",
-    "vue": "^3.5.18",
+    "nuxt": "^4.1.1",
+    "vue": "^3.5.21",
     "vue-router": "^4.5.1",
     "wavesurfer.js": "^7.10.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^1.9.0",
-    "eslint": "^9.33.0"
+    "eslint": "^9.35.0"
   },
   "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
